<resources>
    <string name="app_name">Arbeitsbuch</string>
    <string name="object_verdächtige_text">verdächtige_suspect</string>
    <string name="object_solved_label">solved</string>
    <string name="object_details_label">Details</string>
    <string name="object_photo_no_image_description">No Image</string>
    <string name="object_photo_button_description">Photo</string>
    <string name="object_name">Object Name</string>
    <string name="object_title_hint">Name</string>
    <string name="at_sign">\@</string>
    <string name="object_report_text">Report text</string>
    <string name="object_report_call">Report_call</string>
    <string name="button_object_date">object_date</string>
    <string name="button_object_save">Save</string>
    <string name="button_object_time">object_time_button</string>
    <string name="add_new_object">Add new object</string>
    <string name="error_input_name">"Error input name "</string>

</resources>