<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/object_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/object_photo_no_image_description"
            android:cropToPadding="true"
            android:focusable="true"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/object_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/object_photo_button_description"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/object_name"
            android:text="@string/object_name" />

        <EditText
            android:id="@+id/object_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/obeckt_title_hint" />
    </LinearLayout>

</LinearLayout>